# whisper

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  test.js  utils.cmake
.github/workflows/: release.yml
lib/: index.d.ts  index.js
old/: FunctionWorker.h  Stream.cc  Stream.h  formats.cc  formats.h  hosts.cc  hosts.h  utils.cc  utils.h
scripts/: dlls.js
src/addon/: Model.cc  Model.h  WhisperInference.h  exports.cc  utils.cc  utils.h
src/nodeml_whisper/: Model.cc  Model.h  exports.cc
